finished clipping issues
# Conflicts:
#	frontend/frontend/src/AddAsset.jsx

--- a/frontend/frontend/src/style.css
+++ b/frontend/frontend/src/style.css
@@ -246,7 +246,7 @@
     
     margin-left:22%;
    margin-right: 22%;
-    background-color: rgb(112, 150, 199);
+    background-color: rgb(255,255,255);
     padding-left: 0;
     padding-right: 0;
     
